Fixed wrapping of tags

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -114,11 +114,8 @@ tbody {
   border: thin solid black ;
 }
 
-#lockIcon {
-  height:10px;
-  width:10px;
-  padding:0;
-  margin:0;
+.lockIcon {
+  cursor:pointer;
 }
 
 #question {
@@ -131,18 +128,24 @@ td:not(#question) {
 
 /*--- TAGS --- */
 
+.tagContainer {
+  margin-top:10px;
+}
+
 .tagContainer ul {
   list-style-type:none;
   font-size:12px;
-  margin-top:10px;
 }
 
 .tagContainer ul li {
   display:inline;
+  padding-top:20px;
+  margin-top:100px;
   border-radius: 5px;
   padding:3px;
   border:solid #c6c6c6;
   background:#c6c6c6;
+  white-space:nowrap;
 }
 
 /*--------- STICKY FOOTER -----------*/
